--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
-<!doctype html>
+ <!doctype html>
 <html lang="es">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Catálogo Trébol</title>
 <style>
-:root{
-  --bg:#0b0f14;
-  --card:#111721;
-  --muted:#9fb0c3;
-  --brand:#22c55e;
-  --accent:#60a5fa;
-  --text:#e6edf6;
-  --chip:#1c2430;
-}
+:root{--bg:#0b0f14;--card:#111721;--muted:#9fb0c3;--brand:#22c55e;--accent:#60a5fa;--text:#e6edf6;--chip:#1c2430}
 *{box-sizing:border-box}
 html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial}
 a{color:inherit;text-decoration:none}
-.header{
-  max-width:1200px;margin:24px auto 8px;display:flex;gap:16px;align-items:center;justify-content:space-between;padding:0 16px;
-}
+
+/* Header */
+.header{max-width:1200px;margin:24px auto 8px;display:flex;gap:16px;align-items:center;justify-content:space-between;padding:0 16px}
 .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.3px}
 .brand .dot{width:12px;height:12px;border-radius:999px;background:linear-gradient(135deg,var(--brand),var(--accent));box-shadow:0 0 18px rgba(45,212,191,.45)}
 .search{flex:1;max-width:520px;position:relative}
-.search input{
-  width:100%;background:var(--chip);border:1px solid #223042;color:var(--text);padding:12px 14px 12px 40px;border-radius:12px;outline:none
-}
+.search input{width:100%;background:var(--chip);border:1px solid #223042;color:var(--text);padding:12px 14px 12px 40px;border-radius:12px;outline:none}
 .search svg{position:absolute;left:12px;top:50%;transform:translateY(-50%);opacity:.7}
 .badges{display:flex;gap:8px;flex-wrap:wrap}
 .badge{background:var(--chip);border:1px solid #223042;padding:8px 10px;border-radius:999px;font-size:12px;color:var(--muted)}
+
+/* Grid */
 .container{max-width:1200px;margin:0 auto;padding:16px}
-.grid{display:grid;grid-template-columns:repeat(4,1fr);gap:16px;}
-@media (max-width:1024px){.grid{grid-template-columns:repeat(3,1fr)}}
-@media (max-width:768px){.grid{grid-template-columns:repeat(2,1fr)}}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}          /* 3 columnas */
+@media (max-width:900px){.grid{grid-template-columns:repeat(2,1fr)}}
 @media (max-width:520px){.grid{grid-template-columns:1fr}}
 
-.card{
-  background:var(--card);border:1px solid #223042;border-radius:16px;overflow:hidden;display:flex;flex-direction:column;transition:transform .2s ease, box-shadow .2s ease
-}
+/* Card */
+.card{background:var(--card);border:1px solid #223042;border-radius:16px;overflow:hidden;display:flex;flex-direction:column;transition:transform .2s ease, box-shadow .2s ease}
 .card:hover{transform:translateY(-2px);box-shadow:0 6px 22px rgba(0,0,0,.35)}
 .thumb{aspect-ratio:1/1;display:block;overflow:hidden;background:#0e141c;position:relative}
 .thumb img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .25s ease}
@@ -48,6 +38,8 @@ a{color:inherit;text-decoration:none}
 .row{display:flex;align-items:center;justify-content:space-between;gap:12px}
 .price{font-weight:800;font-size:16px;background:linear-gradient(135deg,var(--brand),var(--accent));-webkit-background-clip:text;background-clip:text;color:transparent}
 .btn{background:linear-gradient(135deg,var(--brand),var(--accent));color:#0a0f15;border:none;padding:10px 12px;border-radius:10px;font-weight:800;cursor:pointer}
+
+/* Footer */
 .footer{max-width:1200px;margin:24px auto 48px;color:var(--muted);font-size:12px;text-align:center;padding:0 16px}
 
 /* Lightbox */
@@ -62,7 +54,7 @@ a{color:inherit;text-decoration:none}
     <div class="brand"><span class="dot"></span> <span>Trébol</span></div>
     <div class="search">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.3-4.3m1.3-5.4a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-      <input id="q" placeholder="Buscar productos (ej. trébol 3)…" oninput="filterCards()" />
+      <input id="q" placeholder="Buscar productos (ej. trébol 3)..." oninput="filterCards()" />
     </div>
     <div class="badges">
       <span class="badge">Entrega rápida</span>
@@ -73,7 +65,7 @@ a{color:inherit;text-decoration:none}
 
   <main class="container">
     <section id="grid" class="grid">
-
+      <!-- 1 -->
       <article class="card" data-title="trébol 1">
         <a href="#" class="thumb" onclick="openLightbox('trebol%201.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -88,6 +80,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 2 -->
       <article class="card" data-title="trébol 2">
         <a href="#" class="thumb" onclick="openLightbox('trebol%202.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -102,6 +95,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 3 -->
       <article class="card" data-title="trébol 3">
         <a href="#" class="thumb" onclick="openLightbox('trebol%203.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -116,6 +110,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 4 -->
       <article class="card" data-title="trébol 4">
         <a href="#" class="thumb" onclick="openLightbox('trebol%204.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -130,6 +125,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 5 -->
       <article class="card" data-title="trébol 5">
         <a href="#" class="thumb" onclick="openLightbox('trebol%205.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -144,6 +140,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 6 -->
       <article class="card" data-title="trébol 6">
         <a href="#" class="thumb" onclick="openLightbox('trebol%206.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -158,6 +155,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 7 -->
       <article class="card" data-title="trébol 7">
         <a href="#" class="thumb" onclick="openLightbox('trebol%207.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -172,6 +170,7 @@ a{color:inherit;text-decoration:none}
         </div>
       </article>
 
+      <!-- 8 -->
       <article class="card" data-title="trébol 8">
         <a href="#" class="thumb" onclick="openLightbox('trebol%208.jpeg');return false;">
           <span class="tag">Nuevo</span>
@@ -185,35 +184,36 @@ a{color:inherit;text-decoration:none}
           </div>
         </div>
       </article>
-
     </section>
   </main>
 
   <div id="lightbox" onclick="closeLightbox()">
-     <button class="close" onclick="closeLightbox();event.stopPropagation()">Cerrar ✕</button>
-     <img id="lightboxImg" src="" alt="Vista ampliada" />
+    <button class="close" onclick="closeLightbox();event.stopPropagation()">Cerrar ✕</button>
+    <img id="lightboxImg" src="" alt="Vista ampliada" />
   </div>
 
-  <footer class="footer">Catálogo interactivo. Personaliza títulos, precios y el número de WhatsApp en el botón “Consultar”.</footer>
+  <footer class="footer">
+    Catálogo interactivo. Personaliza títulos, precios y el número de WhatsApp en el botón “Consultar”.
+  </footer>
 
   <script>
-    function filterCards() {
+    function filterCards(){
       const q = document.getElementById('q').value.toLowerCase().trim();
-      document.querySelectorAll('.card').forEach(card => {
+      document.querySelectorAll('.card').forEach(card=>{
         const ok = card.dataset.title.includes(q);
         card.style.display = ok ? '' : 'none';
       });
     }
-    function openLightbox(src) {
+    function openLightbox(src){
       document.getElementById('lightboxImg').src = src;
       document.getElementById('lightbox').classList.add('show');
     }
-    function closeLightbox() {
+    function closeLightbox(){
       document.getElementById('lightbox').classList.remove('show');
     }
-    function wa(title) {
+    function wa(title){
       const phone = '573001112233'; // <-- cambia a tu número
-      const msg = encodeURIComponent('Hola, me interesa ' + title);
+      const msg   = encodeURIComponent('Hola, me interesa ' + title);
       window.open('https://wa.me/' + phone + '?text=' + msg, '_blank');
     }
   </script>
