--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
- <!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Catálogo Trébol</title>
+<meta name="color-scheme" content="dark light" />
 <style>
 :root{
-  --bg:#0b0f14;--card:#111721;--muted:#9fb0c3;--brand:#22c55e;--accent:#60a5fa;
-  --text:#e6edf6;--chip:#1c2430;--stroke:#223042
+  --bg:#0b0f14;--text:#e6edf6;--muted:#a8b3c3;
+  --card:#101722;--stroke:#223042;--chip:#182232;
+  --brand:#22c55e;--accent:#60a5fa;--danger:#ef4444;
 }
 *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial}
 a{color:inherit;text-decoration:none}
 
+/* Header */
 .header{max-width:1200px;margin:24px auto 8px;padding:0 16px;display:flex;gap:16px;align-items:center;justify-content:space-between}
-.brand{display:flex;align-items:center;gap:10px;font-weight:800}
+.brand{display:flex;align-items:center;gap:10px;font-weight:900;letter-spacing:.2px}
 .brand .dot{width:12px;height:12px;border-radius:999px;background:linear-gradient(135deg,var(--brand),var(--accent));box-shadow:0 0 18px rgba(45,212,191,.45)}
 .search{flex:1;max-width:520px;position:relative}
-.search input{width:100%;background:var(--chip);border:1px solid var(--stroke);color:var(--text);padding:12px 14px 12px 40px;border-radius:12px;outline:none}
-.search svg{position:absolute;left:12px;top:50%;transform:translateY(-50%);opacity:.6}
+.search input{width:100%;background:var(--chip);border:1px solid var(--stroke);color:var(--text);padding:12px 14px 12px 42px;border-radius:12px;outline:none}
+.search svg{position:absolute;left:12px;top:50%;transform:translateY(-50%);opacity:.65}
 .badges{display:flex;gap:8px;flex-wrap:wrap}
 .badge{background:var(--chip);border:1px solid var(--stroke);padding:8px 10px;border-radius:999px;font-size:12px;color:var(--muted)}
 
+/* Grid */
 .container{max-width:1200px;margin:0 auto;padding:16px}
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
-@media (max-width:900px){.grid{grid-template-columns:repeat(2,1fr)}}
-@media (max-width:560px){.grid{grid-template-columns:1fr}}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+@media (max-width:980px){.grid{grid-template-columns:repeat(2,1fr)}}
+@media (max-width:580px){.grid{grid-template-columns:1fr}}
 
+/* Card */
 .card{background:var(--card);border:1px solid var(--stroke);border-radius:16px;overflow:hidden;display:flex;flex-direction:column;transition:transform .18s ease,box-shadow .18s ease}
-.card:hover{transform:translateY(-2px);box-shadow:0 10px 26px rgba(0,0,0,.35)}
-.thumb{display:block;position:relative;aspect-ratio:1/1;background:#0e141c}
+.card:hover{transform:translateY(-2px);box-shadow:0 14px 36px rgba(0,0,0,.35)}
+.thumb{position:relative;display:block;aspect-ratio:1/1;background:#0e141c}
 .thumb img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .25s ease}
 .card:hover .thumb img{transform:scale(1.03)}
-.tag{position:absolute;left:8px;top:8px;background:rgba(255,255,255,.1);border:1px solid #2a3a4e;color:#cfe5ff;padding:4px 8px;border-radius:999px;font-size:12px}
-
-.content{padding:12px 14px 14px}
-.title{font-size:15px;font-weight:800;margin:2px 0 8px}
+.tag{position:absolute;left:10px;top:10px;background:rgba(255,255,255,.08);border:1px solid #2a3a4e;padding:4px 8px;border-radius:999px;font-size:12px;color:#d9e6ff}
+.content{padding:14px}
+.title{font-size:16px;font-weight:900;margin:2px 0 10px}
 .row{display:flex;align-items:center;justify-content:space-between;gap:12px}
 .price{font-weight:800;font-size:16px;background:linear-gradient(135deg,var(--brand),var(--accent));-webkit-background-clip:text;background-clip:text;color:transparent}
-.btn{background:linear-gradient(135deg,var(--brand),var(--accent));color:#0a0f15;border:none;padding:10px 12px;border-radius:10px;font-weight:800;cursor:pointer}
-
-.footer{max-width:1200px;margin:24px auto 48px;color:var(--muted);font-size:12px;text-align:center;padding:0 16px}
+.btn{background:linear-gradient(135deg,var(--brand),var(--accent));color:#0b0f14;border:none;padding:10px 12px;border-radius:10px;font-weight:900;cursor:pointer}
+.btn:active{transform:translateY(1px)}
+.sku{margin-top:6px;color:var(--muted);font-size:12px}
 
 /* Lightbox */
 #lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;align-items:center;justify-content:center;padding:20px;z-index:50}
 #lightbox.show{display:flex}
-#lightbox img{max-width:92vw;max-height:86vh;border-radius:14px;border:1px solid #2a3a4e}
+#lightbox img{max-width:92vw;max-height:86vh;border-radius:14px;border:1px solid #2a3a4e;background:#000}
 .close{position:absolute;top:16px;right:16px;background:#111721;border:1px solid var(--stroke);color:#fff;border-radius:10px;padding:8px 10px;cursor:pointer}
+
+/* Footer */
+.footer{max-width:1200px;margin:26px auto 50px;color:var(--muted);font-size:12px;text-align:center;padding:0 16px}
 </style>
 </head>
 <body>
@@ -63,101 +70,7 @@ a{color:inherit;text-decoration:none}
 </header>
 
 <main class="container">
-  <section class="grid">
-
-    <!-- Tarjetas (usa %20 por el espacio en los nombres de archivo) -->
-    <article class="card" data-title="trébol 1">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%201.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%201.jpeg" alt="Trébol 1" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 1</div>
-        <div class="row">
-          <div class="price"></div>
-          <button class="btn" onclick="wa('Trébol 1')">Consultar</button>
-        </div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 2">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%202.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%202.jpeg" alt="Trébol 2" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 2</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 2')">Consultar</button></div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 3">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%203.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%203.jpeg" alt="Trébol 3" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 3</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 3')">Consultar</button></div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 4">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%204.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%204.jpeg" alt="Trébol 4" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 4</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 4')">Consultar</button></div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 5">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%205.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%205.jpeg" alt="Trébol 5" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 5</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 5')">Consultar</button></div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 6">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%206.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%206.jpeg" alt="Trébol 6" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 6</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 6')">Consultar</button></div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 7">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%207.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%207.jpeg" alt="Trébol 7" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 7</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 7')">Consultar</button></div>
-      </div>
-    </article>
-
-    <article class="card" data-title="trébol 8">
-      <a class="thumb" href="#" onclick="openLightbox('trebol%208.jpeg');return false;">
-        <span class="tag">Nuevo</span>
-        <img src="trebol%208.jpeg" alt="Trébol 8" loading="lazy" />
-      </a>
-      <div class="content">
-        <div class="title">Trébol 8</div>
-        <div class="row"><div class="price"></div><button class="btn" onclick="wa('Trébol 8')">Consultar</button></div>
-      </div>
-    </article>
-
-  </section>
+  <section id="grid" class="grid"></section>
 </main>
 
 <!-- Lightbox -->
@@ -166,28 +79,80 @@ a{color:inherit;text-decoration:none}
   <img id="lightboxImg" src="" alt="Vista ampliada" />
 </div>
 
-<footer class="footer">Catálogo interactivo. Personaliza títulos, precios y el número de WhatsApp en el botón “Consultar”.</footer>
+<footer class="footer">
+  Catálogo interactivo. Para agregar productos sube <code>trebol_#.jpeg</code> (sin espacios) y ajusta <code>PRODUCT_COUNT</code>.
+</footer>
 
 <script>
+/* -------- CONFIG -------- */
+const PRODUCT_COUNT = 8;                   
+const WHATSAPP_PHONE = '573147391803';     // <-- Tu número
+
+/* -------- GENERAR CARDS -------- */
+const grid = document.getElementById('grid');
+
+for (let n = 1; n <= PRODUCT_COUNT; n++) {
+  const title = `Trébol ${n}`;
+  const sku = `SKU-TREB-${String(n).padStart(3,'0')}`;
+  const mainSrc = `trebol_${n}.jpeg`;
+  const fallbacks = [
+    `trebol_${n}.jpg`,
+    `trebol%20${n}.jpeg`,
+    `trebol%20${n}.jpg`
+  ];
+
+  const card = document.createElement('article');
+  card.className = 'card';
+  card.dataset.title = `trebol ${n}`.toLowerCase();
+
+  card.innerHTML = `
+    <a class="thumb" href="#">
+      <span class="tag">Nuevo</span>
+      <img alt="${title}" loading="lazy" />
+    </a>
+    <div class="content">
+      <div class="title">${title}</div>
+      <div class="row">
+        <div class="price"></div>
+        <button class="btn">Consultar</button>
+      </div>
+      <div class="sku">${sku}</div>
+    </div>
+  `;
+
+  const img = card.querySelector('img');
+  img.src = mainSrc;
+  img.onerror = () => {                       
+    const next = fallbacks.shift();
+    if (next) { img.onerror = null; img.src = next; }
+  };
+
+  // Lightbox
+  card.querySelector('.thumb').onclick = (e) => {
+    e.preventDefault();
+    const lb = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lightboxImg');
+    lbImg.src = img.src;
+    lb.classList.add('show');
+  };
+
+  // WhatsApp
+  card.querySelector('.btn').onclick = () => {
+    const msg = encodeURIComponent(`Hola, me interesa ${title} (${sku}). ¿Me das precio y disponibilidad?`);
+    window.open(`https://wa.me/${WHATSAPP_PHONE}?text=${msg}`, '_blank');
+  };
+
+  grid.appendChild(card);
+}
+
+/* -------- Helpers -------- */
 function filterCards(){
   const q = document.getElementById('q').value.toLowerCase().trim();
   document.querySelectorAll('.card').forEach(c=>{
-    const ok = c.dataset.title.includes(q);
-    c.style.display = ok ? '' : 'none';
+    c.style.display = c.dataset.title.includes(q) ? '' : 'none';
   });
 }
-function openLightbox(src){
-  document.getElementById('lightboxImg').src = src;
-  document.getElementById('lightbox').classList.add('show');
-}
-function closeLightbox(){
-  document.getElementById('lightbox').classList.remove('show');
-}
-function wa(title){
-  const phone = '573001112233'; // <-- cámbialo por tu número
-  const msg = encodeURIComponent('Hola, me interesa ' + title);
-  window.open('https://wa.me/'+phone+'?text='+msg,'_blank');
-}
+function closeLightbox(){ document.getElementById('lightbox').classList.remove('show'); }
 </script>
 </body>
 </html>
