--- a/index.html
+++ b/index.html
@@ -1,158 +1,104 @@
-<!doctype html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Catálogo Trébol</title>
-<meta name="color-scheme" content="dark light" />
-<style>
-:root{
-  --bg:#0b0f14;--text:#e6edf6;--muted:#a8b3c3;
-  --card:#101722;--stroke:#223042;--chip:#182232;
-  --brand:#22c55e;--accent:#60a5fa;--danger:#ef4444;
-}
-*{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial}
-a{color:inherit;text-decoration:none}
-
-/* Header */
-.header{max-width:1200px;margin:24px auto 8px;padding:0 16px;display:flex;gap:16px;align-items:center;justify-content:space-between}
-.brand{display:flex;align-items:center;gap:10px;font-weight:900;letter-spacing:.2px}
-.brand .dot{width:12px;height:12px;border-radius:999px;background:linear-gradient(135deg,var(--brand),var(--accent));box-shadow:0 0 18px rgba(45,212,191,.45)}
-.search{flex:1;max-width:520px;position:relative}
-.search input{width:100%;background:var(--chip);border:1px solid var(--stroke);color:var(--text);padding:12px 14px 12px 42px;border-radius:12px;outline:none}
-.search svg{position:absolute;left:12px;top:50%;transform:translateY(-50%);opacity:.65}
-.badges{display:flex;gap:8px;flex-wrap:wrap}
-.badge{background:var(--chip);border:1px solid var(--stroke);padding:8px 10px;border-radius:999px;font-size:12px;color:var(--muted)}
-
-/* Grid */
-.container{max-width:1200px;margin:0 auto;padding:16px}
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
-@media (max-width:980px){.grid{grid-template-columns:repeat(2,1fr)}}
-@media (max-width:580px){.grid{grid-template-columns:1fr}}
-
-/* Card */
-.card{background:var(--card);border:1px solid var(--stroke);border-radius:16px;overflow:hidden;display:flex;flex-direction:column;transition:transform .18s ease,box-shadow .18s ease}
-.card:hover{transform:translateY(-2px);box-shadow:0 14px 36px rgba(0,0,0,.35)}
-.thumb{position:relative;display:block;aspect-ratio:1/1;background:#0e141c}
-.thumb img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .25s ease}
-.card:hover .thumb img{transform:scale(1.03)}
-.tag{position:absolute;left:10px;top:10px;background:rgba(255,255,255,.08);border:1px solid #2a3a4e;padding:4px 8px;border-radius:999px;font-size:12px;color:#d9e6ff}
-.content{padding:14px}
-.title{font-size:16px;font-weight:900;margin:2px 0 10px}
-.row{display:flex;align-items:center;justify-content:space-between;gap:12px}
-.price{font-weight:800;font-size:16px;background:linear-gradient(135deg,var(--brand),var(--accent));-webkit-background-clip:text;background-clip:text;color:transparent}
-.btn{background:linear-gradient(135deg,var(--brand),var(--accent));color:#0b0f14;border:none;padding:10px 12px;border-radius:10px;font-weight:900;cursor:pointer}
-.btn:active{transform:translateY(1px)}
-.sku{margin-top:6px;color:var(--muted);font-size:12px}
-
-/* Lightbox */
-#lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;align-items:center;justify-content:center;padding:20px;z-index:50}
-#lightbox.show{display:flex}
-#lightbox img{max-width:92vw;max-height:86vh;border-radius:14px;border:1px solid #2a3a4e;background:#000}
-.close{position:absolute;top:16px;right:16px;background:#111721;border:1px solid var(--stroke);color:#fff;border-radius:10px;padding:8px 10px;cursor:pointer}
-
-/* Footer */
-.footer{max-width:1200px;margin:26px auto 50px;color:var(--muted);font-size:12px;text-align:center;padding:0 16px}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trébol Tienda</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: white;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #4CAF50;
+        }
+        .productos {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .producto {
+            background-color: #1e1e1e;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+        .producto img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+        .producto h2 {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+        .producto a {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 15px;
+            background-color: #25D366;
+            color: white;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .producto a:hover {
+            background-color: #1ebe5d;
+        }
+    </style>
 </head>
 <body>
-<header class="header">
-  <div class="brand"><span class="dot"></span><span>Trébol</span></div>
-  <div class="search">
-    <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.3-4.3m1.3-5.4a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-    <input id="q" placeholder="Buscar productos (ej. trébol 3)..." oninput="filterCards()" />
-  </div>
-  <div class="badges">
-    <span class="badge">Entrega rápida</span>
-    <span class="badge">Atención directa</span>
-    <span class="badge">Pagos seguros</span>
-  </div>
-</header>
 
-<main class="container">
-  <section id="grid" class="grid"></section>
-</main>
+    <h1>Trébol Tienda</h1>
 
-<!-- Lightbox -->
-<div id="lightbox" onclick="closeLightbox()">
-  <button class="close" onclick="closeLightbox();event.stopPropagation()">Cerrar ✕</button>
-  <img id="lightboxImg" src="" alt="Vista ampliada" />
-</div>
-
-<footer class="footer">
-  Catálogo interactivo. Para agregar productos sube <code>trebol_#.jpeg</code> (sin espacios) y ajusta <code>PRODUCT_COUNT</code>.
-</footer>
-
-<script>
-/* -------- CONFIG -------- */
-const PRODUCT_COUNT = 8;                   
-const WHATSAPP_PHONE = '573147391803';     // <-- Tu número
-
-/* -------- GENERAR CARDS -------- */
-const grid = document.getElementById('grid');
-
-for (let n = 1; n <= PRODUCT_COUNT; n++) {
-  const title = `Trébol ${n}`;
-  const sku = `SKU-TREB-${String(n).padStart(3,'0')}`;
-  const mainSrc = `trebol_${n}.jpeg`;
-  const fallbacks = [
-    `trebol_${n}.jpg`,
-    `trebol%20${n}.jpeg`,
-    `trebol%20${n}.jpg`
-  ];
-
-  const card = document.createElement('article');
-  card.className = 'card';
-  card.dataset.title = `trebol ${n}`.toLowerCase();
-
-  card.innerHTML = `
-    <a class="thumb" href="#">
-      <span class="tag">Nuevo</span>
-      <img alt="${title}" loading="lazy" />
-    </a>
-    <div class="content">
-      <div class="title">${title}</div>
-      <div class="row">
-        <div class="price"></div>
-        <button class="btn">Consultar</button>
-      </div>
-      <div class="sku">${sku}</div>
+    <div class="productos">
+        <div class="producto">
+            <img src="trebol_1.jpeg" alt="Trébol 1">
+            <h2>Trébol 1</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%201" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_2.jpeg" alt="Trébol 2">
+            <h2>Trébol 2</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%202" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_3.jpeg" alt="Trébol 3">
+            <h2>Trébol 3</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%203" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_4.jpeg" alt="Trébol 4">
+            <h2>Trébol 4</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%204" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_5.jpeg" alt="Trébol 5">
+            <h2>Trébol 5</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%205" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_6.jpeg" alt="Trébol 6">
+            <h2>Trébol 6</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%206" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_7.jpeg" alt="Trébol 7">
+            <h2>Trébol 7</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%207" target="_blank">Consultar</a>
+        </div>
+        <div class="producto">
+            <img src="trebol_8.jpeg" alt="Trébol 8">
+            <h2>Trébol 8</h2>
+            <a href="https://wa.me/573147391803?text=Hola,%20quiero%20información%20sobre%20Trébol%208" target="_blank">Consultar</a>
+        </div>
     </div>
-  `;
 
-  const img = card.querySelector('img');
-  img.src = mainSrc;
-  img.onerror = () => {                       
-    const next = fallbacks.shift();
-    if (next) { img.onerror = null; img.src = next; }
-  };
-
-  // Lightbox
-  card.querySelector('.thumb').onclick = (e) => {
-    e.preventDefault();
-    const lb = document.getElementById('lightbox');
-    const lbImg = document.getElementById('lightboxImg');
-    lbImg.src = img.src;
-    lb.classList.add('show');
-  };
-
-  // WhatsApp
-  card.querySelector('.btn').onclick = () => {
-    const msg = encodeURIComponent(`Hola, me interesa ${title} (${sku}). ¿Me das precio y disponibilidad?`);
-    window.open(`https://wa.me/${WHATSAPP_PHONE}?text=${msg}`, '_blank');
-  };
-
-  grid.appendChild(card);
-}
-
-/* -------- Helpers -------- */
-function filterCards(){
-  const q = document.getElementById('q').value.toLowerCase().trim();
-  document.querySelectorAll('.card').forEach(c=>{
-    c.style.display = c.dataset.title.includes(q) ? '' : 'none';
-  });
-}
-function closeLightbox(){ document.getElementById('lightbox').classList.remove('show'); }
-</script>
 </body>
 </html>
